# tauri-action-flow

./: package.json
.github/workflows/: macbuilder.yml
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  process_detail.rs  spotlight.rs
